fixing a navbar overflow issue at breakpoint 650px

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ footer div:last-child{padding-bottom:0}
 .mostPopular{width:100%}
 .cardsContainer_mostPopular{display:flex; flex-direction:column; ; justify-content:space-around}
 .card_info{display:flex; flex-direction:column; justify-content:space-between; font-size:.8rem; margin-top:1rem}
-.mostPopular_card{height:12vh; width:90vw; display:flex; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:.2rem; padding-right:1rem}
+.mostPopular_card{height:12vh; /*width:90vw;*/ display:flex; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:.2rem; padding-right:1rem}
 .mostPopular_card_img{width:35%; margin-right:1rem; height:auto; object-fit:cover; border-top-left-radius:20px; border-bottom-left-radius:20px}
 
 .accomodations{width:100%}
@@ -164,7 +164,7 @@ footer div:last-child{padding-bottom:0}
   header{padding-top:0}
   .logo{padding-top:1.5rem}
   .register{padding-top:21px; margin-right:2rem; order:1}
-  nav{flex-direction:row; justify-content:flex-end; width:100vw}
+  nav{flex-direction:row; justify-content:flex-end; /*width:100vw*/}
   .flexUl{margin-left:auto; width:300px}
   .flexUl li{border:none; padding-top:21px}
   .flexUl li:first-child{border:none; border-top:solid var(--blue) 2px; padding-top:19px}
